# rpicoplot

./: .gitignore  Cargo.toml  README.md
img/: 240_dim_fleur.qoi  gold_shaded_fleur_de_lis.qoi
src/: main.rs
